Saving before chain learning.

--- a/Langchain.ipynb
+++ b/Langchain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPf1YntRQQFY6gfiH+XDqcG",
+      "authorship_tag": "ABX9TyNKGQaCuTYXb1oXOL+jPvHG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8859,13 +8859,20 @@
         "from huggingface_hub import login\n",
         "\n",
         "# Replace YOUR_TOKEN with your Hugging Face token\n",
-        "login(token=\"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\")"
+        "login(token=\"\")"
       ],
       "metadata": {
         "id": "_KNnS3eWhhDa"
       },
       "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "_eyRSowLmRNR"
+      }
     },
     {
       "cell_type": "code",
@@ -9373,6 +9380,265 @@
           "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#CHaT models\n",
+        "from langchain_core.messages import (HumanMessage, SystemMessage)\n",
+        "from langchain_huggingface import ChatHuggingFace"
+      ],
+      "metadata": {
+        "id": "4wiAg9dokzo-"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "msgs = [\n",
+        "    SystemMessage(content = \"You are a helpful assistant answering general questions.\"),\n",
+        "    HumanMessage(content = \"Explain briefly the concept of AI.\")\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "QsHeepGmk7VG"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_model = ChatHuggingFace(llm = llm)"
+      ],
+      "metadata": {
+        "id": "bchxyNH9k9Jp"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.prompts import PromptTemplate\n",
+        "\n",
+        "prompt_template = PromptTemplate.from_template(\"Write a poem about {topic}\")\n",
+        "\n",
+        "prompt_template.invoke({\"topic\": \"artificial intelligence\"})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V-E1YW9Uk-uI",
+        "outputId": "14e464a6-3970-42b1-f752-2b62e028592e"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "StringPromptValue(text='Write a poem about artificial intelligence')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt_template"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AwBAbxb-lHQZ",
+        "outputId": "924da288-ab09-4caf-8f72-b9796305c9ff"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PromptTemplate(input_variables=['topic'], input_types={}, partial_variables={}, template='Write a poem about {topic}')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.prompts import ChatPromptTemplate\n",
+        "\n",
+        "prompt = ChatPromptTemplate.from_messages([\n",
+        "    (\"system\", \"You are a helpful assistant answering general questions.\"),\n",
+        "    (\"user\", \"Explain to me in 1 paragraph the concept of {topic}.\")\n",
+        "])\n",
+        "\n",
+        "prompt.invoke({\"topic\": \"AI\"})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pxLRyKrvlCEd",
+        "outputId": "2e68e29e-d438-4018-f061-c01e9f4e75a5"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ChatPromptValue(messages=[SystemMessage(content='You are a helpful assistant answering general questions.', additional_kwargs={}, response_metadata={}), HumanMessage(content='Explain to me in 1 paragraph the concept of AI.', additional_kwargs={}, response_metadata={})])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "system_prompt = \"You are a helpful assistant answering general questions.\"\n",
+        "user_prompt = \"Explain to me in 1 paragraph the concept of {topic}.\""
+      ],
+      "metadata": {
+        "id": "7VLIAAGQlIah"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "template"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 93
+        },
+        "id": "qZbwL7g6lKVX",
+        "outputId": "ad62f0e5-bbcc-4434-ee75-8a042ae522bb"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\n<|begin_of_text|>\\n<|start_header_id|>system<|end_header_id|>\\n{system_prompt}\\n<|eot_id|>\\n<|start_header_id|>user<|end_header_id|>\\n{user_prompt}\\n<|eot_id|>\\n<|start_header_id|>assistant<|end_header_id|>\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = PromptTemplate.from_template(template.format(system_prompt = system_prompt, user_prompt = user_prompt))\n",
+        "prompt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GMNhZ3hGlOpE",
+        "outputId": "7efb6655-0ff3-46fc-fe6f-508b9d50f76b"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PromptTemplate(input_variables=['topic'], input_types={}, partial_variables={}, template='\\n<|begin_of_text|>\\n<|start_header_id|>system<|end_header_id|>\\nYou are a helpful assistant answering general questions.\\n<|eot_id|>\\n<|start_header_id|>user<|end_header_id|>\\nExplain to me in 1 paragraph the concept of {topic}.\\n<|eot_id|>\\n<|start_header_id|>assistant<|end_header_id|>\\n')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt.invoke({\"topic\", \"AI\"})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eRTpJwvmlPd7",
+        "outputId": "ab0ba1d0-f000-40d7-a811-b99a9aa7c30b"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "StringPromptValue(text=\"\\n<|begin_of_text|>\\n<|start_header_id|>system<|end_header_id|>\\nYou are a helpful assistant answering general questions.\\n<|eot_id|>\\n<|start_header_id|>user<|end_header_id|>\\nExplain to me in 1 paragraph the concept of {'AI', 'topic'}.\\n<|eot_id|>\\n<|start_header_id|>assistant<|end_header_id|>\\n\")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = \"Explain the concept of {topic} in a simple way. Write {size}\"\n",
+        "prompt = PromptTemplate.from_template(template.format(system_prompt = system_prompt, user_prompt = prompt))\n",
+        "prompt.invoke({\"topic\": \"AI\", \"size\": \"20 words\"})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uS99upCJlWBQ",
+        "outputId": "f52f31d9-cad6-4bfc-e395-2efbddf8a9ea"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "StringPromptValue(text='\\n<|begin_of_text|>\\n<|start_header_id|>system<|end_header_id|>\\nYou are a helpful assistant answering general questions.\\n<|eot_id|>\\n<|start_header_id|>user<|end_header_id|>\\nExplain the concept of AI in a simple way. Write 20 words\\n<|eot_id|>\\n<|start_header_id|>assistant<|end_header_id|>\\n')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Using chains"
+      ],
+      "metadata": {
+        "id": "OdM7JxrUmKkj"
+      }
     }
   ]
 }
