Ziskat infomacii z linku , title, url a transkripcia

--- a/LLM_Video_transcriptand_summarization.ipynb
+++ b/LLM_Video_transcriptand_summarization.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMj7F02jrwnQ2pB7Izsvrz0",
+      "authorship_tag": "ABX9TyPk7kpAf1okS7vuEXwDJ3xU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,12 +146,176 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "#Video transcription"
+      ],
       "metadata": {
-        "id": "x9TWfHg4knuC"
+        "id": "TwmykU-FlHpB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Loading transcript\n",
+        "\n",
+        "\n",
+        "video_loader = YoutubeLoader.from_youtube_url(\"https://www.youtube.com/watch?v=dQw4w9WgXcQ\")\n",
+        "infos = video_loader.load()\n",
+        "print(infos)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x9TWfHg4knuC",
+        "outputId": "3db7b670-5dcb-4eb8-af6d-6de377c7aa0c"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Document(metadata={'source': 'dQw4w9WgXcQ'}, page_content=\"[Music] we're no strangers to love you know the rules and so do I I full commitments while I'm thinking of you wouldn't get this from any other guy I just want to tell you how I'm feeling got to make you understand Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you cry never going to say goodbye never going to tell a lie and hurt you we've known each other for so long your heart's been aching but your to sh to say it inside we both know what's been going on we know the game and we're going to playing and if you ask me how I'm feeling don't tell me you're too my you see Never Going To Give You Up never going to let you down never to run around and desert you never going to make you cry never going to say goodbye never going to tell a lie and hurt you never going to give you up never going to let you down never going to run around and desert you never going to make you cry never going to sing goodbye going to tell a lie and hurt you give you give you going to give going to give you going to give going to give you we've known each other for so long your heart's been aching but you're too sh to say inside we both know what's been going on we the game and we're going to play it I just want to tell you how I'm feeling got to make you understand Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you cry never going to say goodbye never going to tell you my and Hurt You Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you C never going to say goodbye never going to tell and Hur You Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you going to [Music] goodbye and\")]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "transcript = infos[0].page_content\n",
+        "transcript"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 348
+        },
+        "id": "G2h6GMGOlbWE",
+        "outputId": "0c99a809-e56d-4f37-ca46-825ceb8857cd"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"[Music] we're no strangers to love you know the rules and so do I I full commitments while I'm thinking of you wouldn't get this from any other guy I just want to tell you how I'm feeling got to make you understand Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you cry never going to say goodbye never going to tell a lie and hurt you we've known each other for so long your heart's been aching but your to sh to say it inside we both know what's been going on we know the game and we're going to playing and if you ask me how I'm feeling don't tell me you're too my you see Never Going To Give You Up never going to let you down never to run around and desert you never going to make you cry never going to say goodbye never going to tell a lie and hurt you never going to give you up never going to let you down never going to run around and desert you never going to make you cry never going to sing goodbye going to tell a lie and hurt you give you give you going to give going to give you going to give going to give you we've known each other for so long your heart's been aching but you're too sh to say inside we both know what's been going on we the game and we're going to play it I just want to tell you how I'm feeling got to make you understand Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you cry never going to say goodbye never going to tell you my and Hurt You Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you C never going to say goodbye never going to tell and Hur You Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you going to [Music] goodbye and\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "def get_video_title(url):\n",
+        "  r = requests.get(url)\n",
+        "  soup = BeautifulSoup(r.text)\n",
+        "\n",
+        "  link = soup.find_all(name = \"title\")[0]\n",
+        "  title = str(link)\n",
+        "  title = title.replace(\"<title>\", \"\")\n",
+        "  title = title.replace(\"</title>\", \"\")\n",
+        "  return title"
+      ],
+      "metadata": {
+        "id": "W45_D9ntlpcO"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "video_url = \"https://www.youtube.com/watch?v=dQw4w9WgXcQ\"\n",
+        "video_title = get_video_title(video_url)\n",
+        "video_title"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "5HKJ6M70mHCz",
+        "outputId": "bcf5a8a2-ceee-40d8-e6b8-1875b21b3fec"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Rick Astley - Never Gonna Give You Up (Official Music Video) - YouTube'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "video_infos = f\"\"\"Video info:\n",
+        "\n",
+        "Title: {video_title}\n",
+        "URL: {video_url}\n",
+        "\n",
+        "Transcription: {transcript}\n",
+        "\"\"\"\n",
+        "\n",
+        "print(video_infos)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wucvuG_MmVzi",
+        "outputId": "f729e7a5-daa2-40cb-9122-2c26de4bdff5"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Video info:\n",
+            "\n",
+            "Title: Rick Astley - Never Gonna Give You Up (Official Music Video) - YouTube\n",
+            "URL: https://www.youtube.com/watch?v=dQw4w9WgXcQ\n",
+            "\n",
+            "Transcription: [Music] we're no strangers to love you know the rules and so do I I full commitments while I'm thinking of you wouldn't get this from any other guy I just want to tell you how I'm feeling got to make you understand Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you cry never going to say goodbye never going to tell a lie and hurt you we've known each other for so long your heart's been aching but your to sh to say it inside we both know what's been going on we know the game and we're going to playing and if you ask me how I'm feeling don't tell me you're too my you see Never Going To Give You Up never going to let you down never to run around and desert you never going to make you cry never going to say goodbye never going to tell a lie and hurt you never going to give you up never going to let you down never going to run around and desert you never going to make you cry never going to sing goodbye going to tell a lie and hurt you give you give you going to give going to give you going to give going to give you we've known each other for so long your heart's been aching but you're too sh to say inside we both know what's been going on we the game and we're going to play it I just want to tell you how I'm feeling got to make you understand Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you cry never going to say goodbye never going to tell you my and Hurt You Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you C never going to say goodbye never going to tell and Hur You Never Going To Give You Up never going to let you down never going to run around and desert you never going to make you going to [Music] goodbye and\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Save file\n",
+        "with io.open(\"transcript.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+        "  for doc in infos:\n",
+        "    f.write(video_infos)"
+      ],
+      "metadata": {
+        "id": "WPO20GbMmnQJ"
+      },
+      "execution_count": 11,
       "outputs": []
     }
   ]
